<resources>
    <string name="app_name">WeeklyPlaner</string>
    <string name="montag">Montag</string>
    <string name="heute">Heute</string>
    <string name="mo_so">Mo-So</string>
    <string name="termin1">Termin1</string>
    <string name="dienstag">Dienstag</string>
    <string name="mittwoch">Mittwoch</string>
    <string name="donnerstag">Donnerstag</string>
    <string name="freitag">Freitag</string>
    <string name="samstag">Samstag</string>
    <string name="sonntag">Sonntag</string>
    <string name="back">Back</string>
    <string name="add">ADD</string>
    <string name="sort">Sort</string>
    <string name="montag1">Montag</string>
    <string name="sort_funktion_impl">Sort-Funktion Impl.</string>
    <string name="terminname">Terminname</string>
    <string name="wann">Wann?</string>
    <string name="beschreibung">Beschreibung</string>
    <string name="priorit_t">Priorität</string>
    <string name="speichern">Speichern</string>
    <string name="Registrieren">Registrierung</string>

    <string-array name="wochentage">
        <item>Montag</item>
        <item>Dienstag</item>
        <item>Mittwoch</item>
        <item>Donnerstag</item>
        <item>Freitag</item>
        <item>Samstag</item>
        <item>Sonntag</item>
    </string-array>

    <string-array name="numbers">
        <item>Priorität 1</item>
        <item>Priorität 2</item>
        <item>Priorität 3</item>
        <item>Priorität 4</item>
        <item>Priorität 5</item>
    </string-array>
    <string name="Register">register</string>
    <string name="Button">buttonRegister</string>
    <string name="Anmeldename_edit_text">Anmeldename</string>
    <string name="PasswortEingabe_edit_text">Passworteingabe</string>
    <string name="senden">senden</string>
    <string name="login">Login</string>
    <string name="passwort_eingeben">Passwort eingeben</string>
    <string name="passwort">Passwort</string>
    <string name="email">Email</string>
    <string name="exampleEmail">example@hotmail.de</string>
    <string name="registriereDichJetzt"><u>Noch keinen Account? Registriere dich jetzt!</u></string>
    <string name="logo">Logo</string>
    <string name="confirmPasswort">Passwort bestätigen</string>
    <string name="min8SignsLong">mind. 8 Zeichen</string>
    <string name="min1Sign">mind. ein Sonderzeichen</string>
    <string name="min1UpperLower">mind. einen Groß- und Kleinbuchstaben</string>
    <string name="min1Figure">mind. eine Zahl</string>
    <string name="Registrieren2">Registrieren</string>
    <string name="terminprio">Priorität</string>
    <string name="prio_absteigend">Priorität absteigend</string>
    <string name="prio_aufsteigend">Priorität aufsteigend</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="willkommen">Herzlich Willkommen</string>
    <string name="weeklyPlaner">WeeklyPlaner</string>
    <string name="emailAngeben">Bitte eine gültige Email Adresse eingeben</string>
    <string name="passwordEingeben">Bitte ein gültiges Passwort eingeben</string>
    <string name="counterText">0/8</string>
    <string name="helpPasswordView">Hinweise für die Erstellung eines Passworts</string>
    <string name="yourWeek">Ihre Woche</string>
    <string name="possibleBeschreibung">Eventuelle Beschreibung:\n- Briefkasten checken \n- Arzttermin 16:30 Uhr\n</string>
    <string name="wieLautetDerTerminName">Wie heißt Ihr neuer Termin?</string>
    <string name="chooseDatum">Datum auswählen</string>
    <string name="notDone">Not Done:</string>
    <string name="done">Done:</string>
    <string name="openAppointments">Offene Termine</string>
    <string name="background">Background</string>
    <string name="yourActivity">Your Activity</string>
    <string name="chooseDate">Wählen Sie ein Datum &amp; die Prio</string>
    <string name="edit">EDIT</string>
    <string name="futureappointments">Zukünftige Termine</string>
</resources>