<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WeekActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/yourWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourWeek"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/backButtonWeekActivity"
        android:layout_marginTop="30dp"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/montag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yourWeek"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/montag" />

    <Button
        android:id="@+id/dienstag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/montag"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/dienstag" />

    <Button
        android:id="@+id/mittwoch"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dienstag"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/mittwoch" />

    <Button
        android:id="@+id/donnerstag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mittwoch"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/donnerstag" />

    <Button
        android:id="@+id/freitag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donnerstag"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/freitag" />

    <Button
        android:id="@+id/samstag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/freitag"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/samstag" />

    <Button
        android:id="@+id/sonntag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/samstag"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:text="@string/sonntag" />

    <ImageButton
        android:id="@+id/backButtonWeekActivity"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:backgroundTint="#00F8F5F5"
        app:tint="#000000"/>

</RelativeLayout>