<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/WeekActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/Montag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="88dp"
        android:backgroundTint="@color/black"
        android:text="@string/montag" />

    <Button
        android:id="@+id/Dienstag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Montag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/dienstag" />

    <Button
        android:id="@+id/Mittwoch"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Dienstag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/mittwoch" />

    <Button
        android:id="@+id/Donnerstag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Mittwoch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/donnerstag" />

    <Button
        android:id="@+id/Freitag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Donnerstag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/freitag" />

    <Button
        android:id="@+id/Samstag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Freitag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/samstag" />

    <Button
        android:id="@+id/Sonntag"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Samstag"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/sonntag" />

    <ImageButton
        android:id="@+id/SortButton"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:backgroundTint="#00F8F5F5"
        app:tint="#000000"/>

</RelativeLayout>