<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!-- TODO: Buttonname entsprechend Auswahl gleiche Geschichte -->
    <ImageButton
        android:id="@+id/SortButton"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/back"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:backgroundTint="#00F8F5F5"
        app:tint="#000000"/>

    <Button
        android:id="@+id/Termin1"
        android:layout_width="171dp"
        android:layout_height="68dp"
        android:layout_below="@id/HeutigerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/black"
        android:text="@string/termin1" />

    <ImageButton
        android:id="@+id/AddButton"
        android:layout_width="77dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:backgroundTint="#00F8F5F5"
        app:tint="#000000"/>

    <Button
        android:id="@+id/HeutigerButton"
        android:layout_width="253dp"
        android:layout_height="73dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="79dp"
        android:background="#000000"
        android:fadingEdge="none"
        android:text="@string/heute" />

    <ImageButton
        android:id="@+id/SortButtonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="321dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="23dp"
        android:backgroundTint="#00F8F5F5"
        android:contentDescription="@string/sort"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        app:tint="#000000" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="249dp"
        android:layout_marginTop="320dp"
        android:text="@string/sort_funktion_impl" />


</RelativeLayout>