<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="253dp"
        android:layout_height="73dp"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="79dp"
        android:background="#000000"
        android:fadingEdge="none"
        android:text="@string/heute" />

    <Button
        android:id="@+id/MoSoButton"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/black"
        android:text="@string/mo_so"
        />

    <Button
        android:id="@+id/Termin1"
        android:layout_width="171dp"
        android:layout_height="68dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/termin1" />

    <ImageButton
        android:id="@+id/AddButton"
        android:layout_width="77dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:backgroundTint="#00F8F5F5"
        app:tint="#000000"/>

    <ImageButton
        android:id="@+id/SortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="333dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        android:contentDescription="@string/sort"
        android:backgroundTint="#00F8F5F5"
        app:tint="#000000"/>

</RelativeLayout>