<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextBeschreibungDetailsActivity"
        android:layout_width="270dp"
        android:layout_height="92dp"
        android:layout_below="@id/textViewTerminName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="369dp"
        android:layout_marginEnd="61dp"
        android:background="#ffffff"
        android:elevation="20dp"
        android:gravity="start"
        android:hint="@string/possibleBeschreibung"
        android:padding="10dp" />

    <ImageButton
        android:id="@+id/backButtonDetailsActivity"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00F8F5F5"
        android:contentDescription="@string/back"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="#000000" />

    <TextView
        android:id="@+id/textViewTerminName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="108dp"
        android:text="@string/terminname"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewBeschreibung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewWann"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="325dp"
        android:text="@string/beschreibung"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWann"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="212dp"
        android:text="@string/wann"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextTerminNameDetailsActivity"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_below="@id/textViewTerminName"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="62dp"
        android:layout_marginTop="148dp"
        android:background="#ffffff"
        android:elevation="10dp"
        android:gravity="start"
        android:hint="@string/wieLautetDerTerminName"
        android:padding="5dp" />
    />

    <Spinner
        android:id="@+id/prioListeDetailsActivity"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="252dp" />



    <Button
        android:id="@+id/editButton"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="101dp"
        android:text="@string/Edit" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="229dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="103dp"
        android:text="@string/Delete" />


    <Button
        android:id="@+id/buttonDatepickerDetailsActivity"
        style="?android:spinnerItemStyle"
        android:layout_width="176dp"
        android:layout_height="58dp"
        android:layout_above="@+id/deleteButton"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="415dp"
        android:layout_toEndOf="@+id/textViewWann"
        android:onClick="openDatePicker"
        android:text="Datum auswählen"
        android:textSize="18sp" />


</RelativeLayout>