<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SpecificDayActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/cardViewLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="-45dp"
            android:layout_marginBottom="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cloudbackground_purple" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/heutigerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/gothammedium1"
        android:text="@string/montag1"
        android:textColor="@color/white"
        android:textSize="48sp" />


    <ImageButton
        android:id="@+id/backButtonSpecificDayActivity"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#00F8F5F5"
        android:contentDescription="@string/back"
        app:srcCompat="?attr/homeAsUpIndicator"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/addButton"
        android:layout_width="77dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="87dp"
        android:backgroundTint="#00F8F5F5"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_menu_add"
        app:tint="#000000" />

    <ImageButton
        android:id="@+id/filterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="333dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="#00F8F5F5"
        android:contentDescription="@string/sort"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"
        app:tint="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/terminlisteRecyclerView"
        android:layout_width="395dp"
        android:layout_height="394dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="169dp" />

</RelativeLayout>